# term-cinema

./: .gitignore  PKGBUILD  README.md  ascii_player.py  badapple.sh  pyproject.toml
player/: audio.py  renderer.py  sync.py  video.py
