[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "term-cinema"
version = "0.2.0"
description = "A Konsole-friendly CLI video player built around Bad Apple and powered by ffmpeg + chafa."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
authors = [
  { name = "Asukate" }
]
keywords = ["terminal", "video", "ascii", "chafa", "bad-apple", "touhou"]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Video",
  "Topic :: Terminals"
]

[project.scripts]
ascii-player = "ascii_player:main"
badapple = "ascii_player:main"

[tool.setuptools]
py-modules = ["ascii_player"]
packages = ["player"]
